[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hadpo"
version = "1.0"
description = "Hallucination-aware Direct Preference Optimization."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.0.1", "torchvision==0.15.2",
    "transformers==4.31.0", "tokenizers>=0.12.1,<0.14", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.22.0", "peft==0.4.0", "bitsandbytes==0.41.0", "flash-attn==1.0.4", "deepspeed==0.9.5",
    "pydantic<2,>=1", "markdown2[all]", "numpy==1.26.1", "scikit-learn==1.2.2", 
    "fairscale==0.4.4", "mmpretrain==1.1.1", "mmcv==2.1.0",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "openai==0.28.1", "datasets", "omegaconf", "iopath", "opencv-python",
    "webdataset", "wandb", "nltk", "decord", "jsonlines", "jmespath",
]

[project.optional-dependencies]
train = ["ninja", "wandb"]

[project.urls]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]